# data-boundary

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  config.py  desktop.py  desktop_entry.py  main.py
backend/app/core/: __init__.py  engine.py  evidence.py  normalizer.py  report_generator.py  router.py  rule_engine.py
backend/app/data/: datause.html
backend/app/domain_packs/: __init__.py  base.py
backend/app/domain_packs/agricultural_genomics/: __init__.py  config.json  pack.py
backend/app/domain_packs/biodata/: __init__.py  config.json  evidence_fixtures.json  pack.py  rules.json
backend/app/domain_packs/custom/: __init__.py  config.json  pack.py
backend/app/domain_packs/drug_procurement/: __init__.py  config.json  pack.py
backend/app/domain_packs/genetic_testing/: __init__.py  config.json  pack.py
backend/app/models/: __init__.py  schemas.py
backend/app/privacy/: __init__.py  gate.py  pipeline.py  schema.py  source_discovery.py  source_registry.json
backend/app/tests/: factories.py  test_api.py  test_biodata_pack.py  test_data_boundary_text_cleanup.py  test_engine.py  test_review_fixes.py  test_rule_engine.py
docs/: release.md  workflow.md
scripts/: package_macos_dmg.sh  prepare_github_release.sh
