[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "data-boundary"
version = "0.1.0a1"
description = "A local-first preliminary data-use review tool for U.S. privacy, consent, and source-term restrictions. Not legal advice."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["privacy", "compliance", "data-use", "assessment", "legal-tech"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.10",
    "httpx>=0.27",
    "pydantic>=2.5",
    "click>=8.0",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]
dev = ["pytest>=8.0"]

[project.scripts]
data-boundary = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
include = [
    "app/**/*.py",
    "app/**/*.json",
    "app/data/datause.html",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.pyright]
include = ["app"]
